--- a/app/src/main/res/layout/activity_server.xml
+++ b/app/src/main/res/layout/activity_server.xml
@@ -7,6 +7,7 @@
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/ipTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ip_address_localhost"
